--- a/hello-world/templates/deployment.yaml
+++ b/hello-world/templates/deployment.yaml
@@ -6,13 +6,13 @@ metadata:
   name: hello-world
   namespace: default
 spec:
-  replicas: 1
+  replicas: {{ .Values.replicas }}
   selector:
     matchLabels:
       app: hello-world
   strategy:
     rollingUpdate:
-      maxSurge: 1
+      maxSurge: {{ .Values.replicas }}
       maxUnavailable: 0
     type: RollingUpdate
   template:
